--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "main": "script.ks",
   "name": "towoldish",
   "version": "1.0.0",
   "description": "편하고 간편한 급식 확인을 위해 만든\r 토월고 급식정보확인 사이트 입니다.",
-  "type" : "module",
+  "build": "webpack",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +16,10 @@
   },
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "@types/chart.js": "^2.9.30",
+  "ts-loader": "^8.0.14",
+  "typescript": "^4.1.2",
+  "webpack": "^5.18.0",
+  "webpack-cli": "^4.4.0"
 }
